{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 50,
  "lineage": "880c187a-05a5-0170-6ee8-919bf30b6e83",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "akshataEC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078af5745f1d9ccc6",
            "arn": "arn:aws:ec2:us-east-1:979426164612:instance/i-09f1d8da7b2a951f9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09f1d8da7b2a951f9",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "akshata",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0387e40e076ae64e0",
            "private_dns": "ip-172-31-19-7.ec2.internal",
            "private_ip": "172.31.19.7",
            "public_dns": "ec2-54-91-183-222.compute-1.amazonaws.com",
            "public_ip": "54.91.183.222",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0533de27316248ead",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "akshata-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a1e058ec",
            "tags": {
              "Name": "akshataEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083343d9f8412fdf1"
            ]
          },
          "dependencies": [
            "aws_security_group.akshata-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "awEC2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-078af5745f1d9ccc6",
            "arn": "arn:aws:ec2:us-east-1:979426164612:instance/i-0d13f96bb33537e9b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d13f96bb33537e9b",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "akshata",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0484390146168bf",
            "private_dns": "ip-172-31-93-3.ec2.internal",
            "private_ip": "172.31.93.3",
            "public_dns": "ec2-18-212-172-60.compute-1.amazonaws.com",
            "public_ip": "18.212.172.60",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0fc3cf91d4447b73a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "akshata-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-46857267",
            "tags": {
              "Name": "awEC2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-083343d9f8412fdf1"
            ]
          },
          "dependencies": [
            "aws_security_group.akshata-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "akshata-lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:loadbalancer/app/akshata-lb/804bd1cee0b0658d",
            "arn_suffix": "app/akshata-lb/804bd1cee0b0658d",
            "dns_name": "akshata-lb-1773007622.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:979426164612:loadbalancer/app/akshata-lb/804bd1cee0b0658d",
            "idle_timeout": 400,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "akshata-lb",
            "security_groups": [
              "sg-001f265149a00c72b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-46857267"
              },
              {
                "subnet_id": "subnet-a1e058ec"
              }
            ],
            "subnets": [
              "subnet-46857267",
              "subnet-a1e058ec"
            ],
            "tags": {
              "Name": "akshata-elb"
            },
            "vpc_id": "vpc-dfcecba5",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.akshata-lb-sg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "akshata-listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:listener/app/akshata-lb/804bd1cee0b0658d/9bf28a7a8fd3c6dd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979426164612:listener/app/akshata-lb/804bd1cee0b0658d/9bf28a7a8fd3c6dd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:loadbalancer/app/akshata-lb/804bd1cee0b0658d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.akshata-lb",
            "aws_lb_target_group.akshata-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "akshata-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e",
            "arn_suffix": "targetgroup/akshata-tg/1ef791962c8d1c9e",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "akshata-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "akshata-tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-dfcecba5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "akshata-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e-20210228073431261900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e",
            "target_id": "i-09f1d8da7b2a951f9"
          },
          "dependencies": [
            "aws_instance.akshataEC2",
            "aws_lb_target_group.akshata-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "aw-lb-tg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e-20210228074304601100000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:979426164612:targetgroup/akshata-tg/1ef791962c8d1c9e",
            "target_id": "i-0d13f96bb33537e9b"
          },
          "dependencies": [
            "aws_instance.awEC2",
            "aws_lb_target_group.akshata-tg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "akshata-lb-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:security-group/sg-001f265149a00c72b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-001f265149a00c72b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "akshata-lb-sg",
            "name_prefix": "",
            "owner_id": "979426164612",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-dfcecba5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "akshata-sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:979426164612:security-group/sg-083343d9f8412fdf1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083343d9f8412fdf1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "172.31.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "akshata-sg",
            "name_prefix": "",
            "owner_id": "979426164612",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-dfcecba5"
          }
        }
      ]
    }
  ]
}